--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "coverage": "nyc --reporter=lcov --reporter=html --reporter=text-summary npm test",
     "check-coverage": "npm run coverage && nyc check-coverage --statements 80 --function 80 --branches 50 --lines 80",
     "lint": "eslint --ignore-path=.gitignore .",
-    "test": "mocha 'test/{!_playground/**,}/*.js'"
+    "test": "mocha \"test/{!_playground/**,}/*.js\""
   },
   "license": "ISC"
 }
