feat: "split" option

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "repository": "medikoo/child-process-ext",
   "dependencies": {
     "cross-spawn": "^6.0.5",
-    "es5-ext": "^0.10.46"
+    "es5-ext": "^0.10.46",
+    "split": "^1.0.1"
   },
   "devDependencies": {
     "chai": "^4.2",
