--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "cross-spawn": "^6.0.5",
     "es5-ext": "^0.10.46",
-    "split2": "^3.1"
+    "split2": "^3.1",
+    "stream-promise": "^3.1"
   },
   "devDependencies": {
     "chai": "^4.2",
