--- a/package.json
+++ b/package.json
@@ -37,6 +37,13 @@
       }
     ]
   },
+  "nyc": {
+    "all": true,
+    "exclude": [
+      "coverage/**",
+      "test/**"
+    ]
+  },
   "scripts": {
     "coverage": "nyc --reporter=lcov --reporter=html --reporter=text-summary npm test",
     "check-coverage": "npm run coverage && nyc check-coverage --statements 80 --function 80 --branches 50 --lines 80",
