--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cross-spawn": "^6.0.5",
     "es5-ext": "^0.10.46",
+    "log": "^6.0.0",
     "split2": "^3.1",
     "stream-promise": "^3.1"
   },
