--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"chai": "^4.2",
 		"eslint": "^5.12",
 		"eslint-config-medikoo": "^2",
+		"git-list-updated": "^1.2.1",
 		"mocha": "^5.2",
 		"nyc": "^13.1",
 		"prettier-elastic": "^1.18.2"
@@ -64,8 +65,11 @@
 		"coverage": "nyc --reporter=lcov --reporter=html --reporter=text-summary npm test",
 		"check-coverage": "npm run coverage && nyc check-coverage --statements 80 --function 80 --branches 50 --lines 80",
 		"lint": "eslint --ignore-path=.gitignore .",
+		"lint:updated": "pipe-git-updated --ext=js -- eslint --ignore-pattern '!*'",
 		"prettier-check": "prettier -c --ignore-path .gitignore \"**/*.{css,html,js,json,md,yaml,yml}\"",
+		"prettier-check:updated": "pipe-git-updated --ext=css --ext=html --ext=js --ext=json --ext=md --ext=yaml --ext=yml -- prettier -c",
 		"prettify": "prettier --write --ignore-path .gitignore \"**/*.{css,html,js,json,md,yaml,yml}\"",
+		"prettify:updated": "pipe-git-updated --ext=css --ext=html --ext=js --ext=json --ext=md --ext=yaml --ext=yml -- prettier --write",
 		"test": "mocha --recursive"
 	},
 	"license": "ISC"
