--- a/package.json
+++ b/package.json
@@ -21,9 +21,24 @@
 		"eslint": "^5.12",
 		"eslint-config-medikoo": "^2",
 		"git-list-updated": "^1.2.1",
+		"husky": "^3.0.5",
+		"lint-staged": "^9.2.5",
 		"mocha": "^5.2",
 		"nyc": "^13.1",
 		"prettier-elastic": "^1.18.2"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged"
+		}
+	},
+	"lint-staged": {
+		"*.js": [
+			"eslint"
+		],
+		"*.{css,html,js,json,md,yaml,yml}": [
+			"prettier -c"
+		]
 	},
 	"eslintConfig": {
 		"extends": "medikoo",
