--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
 	},
 	"devDependencies": {
 		"chai": "^4.3.7",
-		"eslint": "^6.8.0",
-		"eslint-config-medikoo": "^2.7.0",
+		"eslint": "^8.43.0",
+		"eslint-config-medikoo": "^4.2.0",
 		"git-list-updated": "^1.2.1",
 		"husky": "^4.3.8",
 		"lint-staged": "^13.2.2",
@@ -41,11 +41,8 @@
 		]
 	},
 	"eslintConfig": {
-		"extends": "medikoo",
+		"extends": "medikoo/node/6",
 		"root": true,
-		"env": {
-			"node": true
-		},
 		"overrides": [
 			{
 				"files": "test/**/*.js",
