--- a/package.json
+++ b/package.json
@@ -55,8 +55,15 @@
 	"nyc": {
 		"all": true,
 		"exclude": [
+			".github",
 			"coverage/**",
-			"test/**"
+			"test/**",
+			"*.config.js"
+		],
+		"reporter": [
+			"lcov",
+			"html",
+			"text-summary"
 		]
 	},
 	"prettier": {
@@ -75,7 +82,7 @@
 		]
 	},
 	"scripts": {
-		"coverage": "nyc --reporter=lcov --reporter=html --reporter=text-summary npm test",
+		"coverage": "nyc npm test",
 		"check-coverage": "npm run coverage && nyc check-coverage --statements 80 --function 80 --branches 50 --lines 80",
 		"lint": "eslint --ignore-path=.gitignore .",
 		"lint:updated": "pipe-git-updated --ext=js -- eslint --ignore-pattern '!*'",
