--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"eslint": "^8.43.0",
 		"eslint-config-medikoo": "^4.2.0",
 		"git-list-updated": "^1.2.1",
+		"github-release-from-cc-changelog": "^2.3.0",
 		"husky": "^4.3.8",
 		"lint-staged": "^13.2.2",
 		"mocha": "^7.2.0",
